--- a/plateform-web/composer.json
+++ b/plateform-web/composer.json
@@ -7,9 +7,7 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.6.4",
-        "livewire/volt": "^1.7.0"
+        "laravel/tinker": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
